shaku_derive/tests/ui/provider_parameters.stderr
error: Error when parsing value: Parameters are not allowed in Providers
 --> $DIR/provider_parameters.rs:7:10
  |
7 | #[derive(Provider)]
  |          ^^^^^^^^
